# EntitleHub

./: .dockerignore  .env.compose.example  .gitignore  AI开发任务拆分.md  API接口文档.md  README.md  Web 后端接入指南.md  compose.yaml  deny.toml  安全测试清单.md  客户端SDK设计.md  开发手册.md  数据库表结构.md  文档完整性检查.md  权限点与错误码清单.md  部署运维手册.md  项目实施路线图.md
admin/: .gitignore  (+7 more)
backend/: .env.example  Cargo.toml  Dockerfile  README.md  openapi.yaml
backend/migrations/: 20260602171000_create_tenants.sql  20260602172000_create_team_members.sql  20260603100000_create_one_time_tokens_and_mfa_recovery_codes.sql  20260603101000_create_rbac_tables.sql  20260603102000_create_admin_sessions.sql  20260603103000_create_audit_logs.sql  20260603104000_create_customers.sql  20260603105000_create_applications_and_signing_keys.sql  20260603110000_create_licenses.sql  20260603111000_create_devices_and_blacklist.sql  20260603112000_create_client_sessions.sql  20260603113000_create_device_keys.sql  20260603114000_create_release_files_and_releases.sql  20260603115000_create_download_tokens.sql  20260603120000_create_secure_scripts.sql  20260603121000_create_subscriptions.sql  20260603122000_grant_admin_tenant_update.sql  20260603123000_create_admin_refresh_tokens.sql  20260604100000_create_outbox_events.sql  20260604101000_create_system_settings.sql  20260604102000_add_security_retry_event_permission.sql  20260604103000_grant_builtin_role_management.sql  20260604104000_grant_builtin_audit_export.sql  20260604105000_add_script_deprecate_permission.sql  20260605090000_add_release_metadata_signatures.sql  (+24 more)
client-sdk/: Cargo.toml  README.md
(+217 files in other folders)
