[package]
name = "client-sdk"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3.10"
